fix: hidden slider scrollbar

--- a/styles/blocks/_reviews.scss
+++ b/styles/blocks/_reviews.scss
@@ -26,12 +26,21 @@
       scroll-snap-type: x mandatory;
       overflow-x: scroll;
 
+      -ms-overflow-style: none;
+      /* Internet Explorer 10+ */
+      scrollbar-width: none;
+      /* Firefox */
+
       @include tablet-above {
         margin-left: calc(var(--reviewSliderSlideWidth) / 2 * -1);
       }
 
       @include tablet {
         column-gap: 30px;
+      }
+
+      &::-webkit-scrollbar {
+        display: none;
       }
     }
 
