--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1186,6 +1186,10 @@ h4,
        column-gap: 50px;
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
+  -ms-overflow-style: none;
+  /* Internet Explorer 10+ */
+  scrollbar-width: none;
+  /* Firefox */
 }
 @media (min-width: 1024px) {
   .reviews__slider-list {
@@ -1197,6 +1201,9 @@ h4,
     -moz-column-gap: 30px;
          column-gap: 30px;
   }
+}
+.reviews__slider-list::-webkit-scrollbar {
+  display: none;
 }
 .reviews__slider-item {
   min-width: var(--reviewSliderSlideWidth);
